# teaser_use_example

./: ASHRAE140_600.json  pyproject.toml  teaser_example.ipynb
gmt_based_teaser_model/teaser_single/: package.mo
gmt_based_teaser_model/teaser_single/Districts/: DistrictEnergySystem.mo
gmt_based_teaser_model/teaser_single/Loads/B5a6b99ec37f4de7f94020090/: Floor.mo  ICT.mo  Meeting.mo  Office.mo  Restroom.mo  Storage.mo  building.mo  coupling.mo
output/Project_1/: package.order
output/Project_1/python_based_building/: package.mo
output/Project_1/python_based_building/python_based_building_Models/: InternalGains_python_based_buildingMeeting.txt  InternalGains_python_based_buildingOffice.txt  python_based_building_ICT.mo  python_based_building_Meeting.mo  python_based_building_Office.mo
output/Project_2/: USA_CO_Aspen-Pitkin.County-Sardy.Field.724676_TMY3.mos  package.mo
output/Project_2/json_based_building/json_based_building_Models/: InternalGains_json_based_buildingTestRoom600.txt
output/example/Project_1/: package.mo
output/example/Project_1/python_based_building/: package.order
output/example/Project_1/python_based_building/python_based_building_Models/: InternalGains_python_based_buildingICT.txt  InternalGains_python_based_buildingLaboratory.txt  InternalGains_python_based_buildingStorage.txt  package.mo  package.order  python_based_building_Floor.mo  python_based_building_Laboratory.mo  python_based_building_Restroom.mo  (+1 more)
output/example/Project_2/: package.order
output/example/Project_2/json_based_building/: package.mo  package.order
(+9 files in other folders)
