[project]
name = "teaser-usa"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicholas Long",email = "nicholas.long@nrel.gov"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "teaser (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
